# ideiapages

./: .gitignore  README.md
SEO-Apresentacao/: RESUMO_APRESENTACAO.md  index.html  package-lock.json  package.json  tailwind.config.js
SEO-Apresentacao/src/: App.tsx  index.css
_archive/: CONTEXTO_NOVO_CHAT.md  README.md
_docs/: PLANEJAMENTO_IDEIAPAGES_v2.md  PROPOSTA_IDEIAPAGES_v2.md  README.md  custos.md
ideiapages/: .env.example  .gitignore  FASE-0-APROVACAO.md  README.md  ROADMAP.md
ideiapages/behaviors/: README.md
ideiapages/behaviors/research/: README.md
ideiapages/docs/: fluxo-projeto-ideiapages.md  metodologia-sdd.md  sdd-workflow.md
ideiapages/references/: architecture.md  conversion_principles.md  data_model.md  design_system.md  product_facts.md  prompts_engineering.md  security_rules.md  seo_rules.md  serp_exclusion_domains.txt  stopwords-pt-br.txt
ideiapages/references/prompts/: analyze-gaps.md  classify-terms.md  content-quality-and-briefing.md  generate-page.comparativa.md  generate-page.informacional.md  generate-page.navegacional.md  generate-page.transacional.md
ideiapages/research/: README.md  pyproject.toml
ideiapages/research/src/ideiapages_research/: __init__.py  cli.py  settings.py  text.py
ideiapages/research/src/ideiapages_research/behaviors/: __init__.py
ideiapages/research/src/ideiapages_research/behaviors/analyze_gaps/: __init__.py  analyzer.py  summarizer.py
ideiapages/research/src/ideiapages_research/behaviors/classify_terms/: __init__.py  classifier.py
ideiapages/research/src/ideiapages_research/behaviors/collect_autocomplete/: __init__.py  collector.py
ideiapages/research/src/ideiapages_research/behaviors/collect_serp/: __init__.py  collector.py
ideiapages/research/src/ideiapages_research/behaviors/collect_trends/: __init__.py  analyzer.py  runner.py
ideiapages/research/src/ideiapages_research/behaviors/pipeline/: __init__.py  report.py  runner.py  status.py
ideiapages/research/src/ideiapages_research/behaviors/scrape_competitors/: __init__.py  extractor.py  scraper.py
ideiapages/research/src/ideiapages_research/clients/: __init__.py  apify.py  firecrawl.py  pytrends_client.py  supabase.py
ideiapages/research/src/ideiapages_research/llm/: __init__.py  claude.py
ideiapages/research/src/ideiapages_research/types/: __init__.py  autocomplete.py  briefing.py  competitor.py  serp.py  term.py  trends.py
ideiapages/research/tests/: test_apify_autocomplete_clients.py  test_briefing_seo.py  test_classify_terms.py  test_collect_autocomplete_collector.py  test_collect_serp.py  test_extractor.py  test_fase_zero_status.py  test_pipeline_runner.py  test_pytrends_client_unit.py  test_trends_analyzer.py
ideiapages/seeds/: README.md  ideia_chat.json
ideiapages/specs/: fase-0-research-pipeline.break.md  fase-0-research-pipeline.md  fase-1-paginas-piloto.break.md  fase-1-paginas-piloto.md  fase-2-multi-ia-ab.md  fase-3-dashboard.md  fase-4-autocura.md
ideiapages/supabase/: README.md
ideiapages/supabase/migrations/: 0001_termos.sql  0002_serp_snapshots.sql  0003_conteudo_concorrente.sql  0004_briefings_seo.sql  0005_logs_and_metrics.sql  0006_shared_triggers.sql  (+10 more)
ideiapages/web/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
(+205 files in other folders)
